# LeptonInjector

./: CMakeLists.txt  README.md  RELEASE_NOTES  pyproject.toml
.github/workflows/: build_wheels.yml
private/LeptonInjector/: BasicInjectionConfiguration.cxx  Controller.cxx  Coordinates.cxx  DataWriter.cxx  DecayWidths.cxx  EventProps.cxx  HNLDecayEnergy.cxx  LeptonInjector.cxx  Particle.cxx
private/earthmodel-service/: EarthModelService.cxx
private/pybindings/: LeptonInjector.cxx
private/pybindings_pybind11/: LeptonInjector.cxx
private/test/: MultiInjection.cxx  RangedInjection.cxx  Utils.cxx  VolumeInjection.cxx  main.cxx  test-controller.cxx  test-rangedinjection.cxx  test-volumeinjection.cxx  tools.cxx  tools.h
private/test/inc/: tools.h
public/LeptonInjector/: BasicInjectionConfiguration.h  Constants.h  Controller.h  Coordinates.h  DataWriter.h  DecayWidths.h  EventProps.h  HNLDecayEnergy.h  LeptonInjector.h  Particle.h
resources/: dsdxdy-hnl-N-cc-HERAPDF15NLO_EIG_central.fits  dsdxdy-hnl-N-nc-HERAPDF15NLO_EIG_central.fits  dsdxdy-hnlbar-N-cc-HERAPDF15NLO_EIG_central.fits  dsdxdy-hnlbar-N-nc-HERAPDF15NLO_EIG_central.fits  sigma-hnl-N-nc-HERAPDF15NLO_EIG_central.fits  sigma-hnlbar-N-nc-HERAPDF15NLO_EIG_central.fits
resources/examples/: .inject_muons_hnl.py.swp  inject_muons.py  inject_muons_hnl.py  weighting.py
resources/python/LeptonInjector/: __init__.py
tools/wheels/: cibw_before_all.sh  repair_wheel_linux.sh  repair_wheel_macos.sh
