[build-system]
requires = ["scikit-build-core>=0.10", "pybind11[global]>=2.12", "numpy", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "LeptonInjector"
version = "1.1.0"          # keep in sync with configure script
description = "Generates neutrino events for large volume Cherenkov telescopes"
authors = [{name = "IceCube Collaboration"}]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy"]

[project.optional-dependencies]
hdf5 = ["h5py"]

[tool.scikit-build]
minimum-version = "0.11"
wheel.expand-macos-universal-tags = true

# cibuildwheel configuration for building wheels in CI
[tool.cibuildwheel]
before-all = "bash {project}/tools/wheels/cibw_before_all.sh {project}"
skip = "pp*"  # Skip PyPy builds

[tool.cibuildwheel.linux]
environment = { RUNNER_OS="Linux" }
repair-wheel-command = "bash ./tools/wheels/repair_wheel_linux.sh {wheel} {dest_dir}"

[tool.cibuildwheel.macos]
# Set MACOSX_DEPLOYMENT_TARGET to 14.0 to match Homebrew libraries on macOS 14 (Sonoma)
environment = { RUNNER_OS="macOS", MACOSX_DEPLOYMENT_TARGET="14.0" }
repair-wheel-command = "bash ./tools/wheels/repair_wheel_macos.sh {wheel} {dest_dir} {delocate_archs}"
